Download buffering not working with curl src
For some reason, the souphttpsrc element got blacklisted in my setup, and I ended up spending quite some time finding why download buffering wasn't working as expected.
- Launch
GDK_BACKEND=x11 ./playback-test 0 https://trailers.apple.com/movies/wb/aquaman/aquaman-trailer-3_h480p.mov
- Select the
Buffering
toggle in the playbin options - Press play
What should happen: Download buffering, can seek in the already downloaded portion of the video
What happens: Can't seek at all, download buffering doesn't happen
Would be nice if playbin threw an error when the HTTP source being used doesn't support download buffering, or if whatever is needed to make download buffering work was made mandatory for every HTTP source.