backend: Throw a warning when curl gets used

As it disables download buffering, as mentioned in:
https://gitlab.freedesktop.org/gstreamer/gst-plugins-base/issues/551